--- a/client/public/informacoes.html
+++ b/client/public/informacoes.html
@@ -41,6 +41,10 @@
             border: 1px solid #39639C;
         }
 
+        .logo {
+            margin-left: 60px;
+        }
+
         .detalhes{
             background-color: #F8F8F8;
             color: white;
@@ -196,7 +200,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand ms-5" href="#">
-            <img src="logo-softinsa.svg" alt="Logo" height="45">
+            <img class="logo" src="logo-softinsa.svg" alt="Logo" height="45">
           </a>
         </div>
     </nav>
@@ -205,7 +209,7 @@
             <p class="text-start nome">The SoftShares</p>
                 <h1 class="text-start titulo">BEM VINDO ao <br>GUIA DE INTEGRAÇÃO <br> SOFTINSA</h1>
                 <a href="/" class="btn btn-dark">Acesso à página de Administração</a>
-                <a href="#" class="btn btn-dark">Download App Mobile</a>
+                <a href="https://drive.google.com/uc?export=download&id=1xB4r-4HLgBPpvD_Y4WpV_DTxIbO8Wuw0" class="btn btn-dark">Download App Mobile</a>
         </div>
     </header>  
     <div class="detalhes">
@@ -257,7 +261,7 @@
         <div class="fim-esquerda text-start">
             <p>Comece já a utilizar!</p>
             <a href="/" class="btn btn-dark">Acesso à página de Administração</a>
-            <a href="#" class="btn btn-dark">Download App Mobile</a>
+            <a href="https://drive.google.com/uc?export=download&id=1xB4r-4HLgBPpvD_Y4WpV_DTxIbO8Wuw0" class="btn btn-dark">Download App Mobile</a>
         </div>
         <div class="fim-direita text-end">
             <p>Redes Sociais</p>
